# Tect

./: .gitignore  Cargo.toml  README.md  build.ps1  generate_codebase.ps1  lint.ps1  package_vscode_extension.ps1  publish.ps1  run.ps1  specification.md  update deps.ps1  visualize.py
.github/workflows/: publish.yml
editors/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.js  extension.ts
editors/vscode/syntaxes/: tect.tmLanguage.json
examples/: dsbg.tect  login.tect  tect.tect
examples/eshop/: payment_gateway.tect  shop.tect
examples/expected_outputs/: architecture.json  formatted_dsbg.tect  functions.json
examples/tect/: analyzer.tect  engine.tect  extension.tect  lsp.tect  main.tect  models.tect  source_manager.tect  vis_js.tect
experiments/: architecture.dot  architecture.json  functions.json  mock.py  plot.py
extensions/vscode/: README.md  language-configuration.json  package-lock.json  package.json  snippets.json  tsconfig.json
extensions/vscode/src/: extension.ts
extensions/vscode/syntaxes/: tect.tmLanguage.json
github/workflows/: publish.yml
samples/: dsbg.tect  login.tect
server/: Cargo.toml
server/src/: analyzer.rs  engine.rs  formatter.rs  graphviz.rs  html.rs  lsp.rs  main.rs  models.rs  source_manager.rs  tect.pest  test_engine.rs  test_formatter.rs  test_graph.rs  test_new.rs  test_parse.rs  test_parser.rs  tests.rs  vis_js.rs
server/src/export/: dot.rs  mermaid.rs  mod.rs  theme.rs  tikz.rs  vis_js.rs
server/src/tests/: common.rs  engine.rs  formatter.rs  formatting.rs  general.rs  mod.rs  parser.rs
src/: main.rs
