[package]
name = "Tect"
version = "0.0.0"
edition = "2021"

authors = ["Tesserato <tesserato@hotmail.com>"]

include = [
    "src/**/*",
    "README.md",
    "LICENSE",
]
description = "A meta-programming language for reasoning about code architecture."
license = "MIT"

homepage = "https://github.com/tesserato/Tect"
repository = "https://github.com/tesserato/Tect"
documentation = "https://docs.rs/Tect"

readme = "README.md"

keywords = [
    "architecture",
    "dsl",
    "modeling",
    "compiler",
    "visualization"
]

categories = [
    "development-tools",
    "compilers",
    "parser-implementations",
    "visualization",
]

[dependencies]
pest = "2.8"
pest_derive = "2.8"
tower-lsp = "0.20"
tokio = { version = "1.48", features = ["full"] }
dashmap = "6.1"
