[package]
name = "Tect"
version = "0.0.8"
edition = "2021"

authors = ["Tesserato <tesserato@hotmail.com>"]

include = ["src/**/*", "README.md", "LICENSE"]
description = "Minimal (only 6 keywords), type-safe language for software architecture with rich tooling"
license = "MIT"

homepage = "https://github.com/tesserato/Tect"
repository = "https://github.com/tesserato/Tect"
documentation = "https://docs.rs/Tect"

readme = "../README.md"

keywords = ["architecture", "dsl", "modeling", "compiler", "visualization"]

categories = [
    "development-tools",
    "compilers",
    "parser-implementations",
    "visualization",
]

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.49", features = ["full"] }
pest = "2.8"
pest_derive = "2.8"
dashmap = "6.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
walkdir = "2.5"
anyhow = "1.0"
regex = "1.12"
